--- a/style.css
+++ b/style.css
@@ -4,14 +4,13 @@
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   min-height: 100dvh;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  position: relative;
-
-  align-content: center;
-  text-align: center;
 }
 
 h1,
@@ -38,51 +37,26 @@ h4 {
   --font-size-xlg: 28;
 }
 
-header {
-  height: 10dvh;
-
-  background-color: rosybrown;
-}
-
-header h1 {
-  margin-top: 0px;
-
-  padding-top: 1rem;
-  font-size: var(--font-size-md);
-}
-
-main {
-  height: 80dvh;
-
-  align-content: center;
-
-  background-color: pink;
-}
-
-main section h2 {
-  font-size: var(--font-size--sm);
-}
-
-.button-container {
+.btn_container {
   display: grid;
+  grid-template-columns: repeat(3, 6.25rem);
+  grid-template-rows: repeat(2, 6.25rem);
   justify-content: center;
-  grid-template-columns: repeat(3, 0fr);
-  grid-template-rows: repeat(3, 0fr);
+  align-content: center;
+  gap: 3rem;
 }
 
-.button-container button {
-  width: 5rem;
-  height: 5rem;
+.play-button {
+  width: 8rem;
+  height: 8rem;
+  font-size: 24px;
+  background-color: var(--color-cyan);
+  color: var(--color-white);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-footer {
-  height: 10dvh;
-
-  font-size: var(--font-size--xsm);
-  background-color: salmon;
-}
-
-footer p {
-  margin-top: 0px;
-  padding-top: 1rem;
+.play-button:hover {
+  background-color: var(--color-dark-blue);
 }
