--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-
   min-height: 100dvh;
   margin: 0;
   padding: 0;
@@ -38,18 +38,21 @@ h4 {
 }
 
 .btn_container {
+  width: 100%;
+  height: auto;
   display: grid;
-  grid-template-columns: repeat(3, 6.25rem);
-  grid-template-rows: repeat(2, 6.25rem);
   justify-content: center;
-  align-content: center;
-  gap: 3rem;
+  grid-template-columns: repeat(2, 6rem);
+  grid-template-rows: repeat(2, 6rem);
+  gap: 2.5rem;
+
+  padding-right: 10%;
 }
 
 .play-button {
   width: 8rem;
   height: 8rem;
-  font-size: 24px;
+  font-size: var(--font-size-md);
   background-color: var(--color-cyan);
   color: var(--color-white);
   border: none;
@@ -59,4 +62,71 @@ h4 {
 
 .play-button:hover {
   background-color: var(--color-dark-blue);
+}
+
+section article p {
+  font-size: var(--font-size-md);
+}
+
+/*Show Animation*/
+
+.showAnimationLeft {
+  width: 100%;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, 6.25rem);
+  grid-template-rows: repeat(2, 6.25rem);
+  padding-top: 90%;
+  gap: 2.5rem;
+}
+
+/* Estilo inicial del círculo */
+.circle {
+  display: none;
+  position: absolute;
+  left: 42%;
+  top: 20%;
+  width: 20%;
+  height: 10%;
+  border-radius: 50%;
+  background-color: var(--color-dark-blue);
+  box-shadow: 0 0 1rem 1rem var(--color-dark-blue);
+  animation: expand 10s ease-in-out infinite;
+}
+
+/* Animación para expandir y contraer el círculo */
+@keyframes expand {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  33% {
+    transform: scale(2);
+    opacity: 0.8;
+  }
+  66% {
+    transform: scale(2);
+    opacity: 0.8;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+footer {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  text-align: start;
+  width: 100%;
+  height: 20dvb;
+  color: var(--color-dark-gray);
+}
+
+footer ul li,
+a {
+  list-style: none;
+  text-decoration: none;
+  color: var(--color-dark-gray);
 }
