--- a/style.css
+++ b/style.css
@@ -55,29 +55,33 @@ main {
 }
 
 .btn_container button {
-  width: 6rem;
-  height: 6rem;
+  width: 8rem;
+  height: 8rem;
 
-  background-color: #e0e0e0;
+  font-weight: 600;
+  font-size: var(--font-size--sm);
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--color-white);
+
+  background-color: var(--color-white);
   border-radius: 20px;
-  box-shadow: 8px 8px 15px #b3b3b3, -8px -8px 15px #ffffff;
   border: none;
   outline: none;
+  box-shadow: 3px 13px 13px 0px var(--color-gray);
   transition: all 0.3s ease;
+
+  cursor: pointer;
 }
 
-button:active {
-  box-shadow: inset 8px 8px 15px #b3b3b3, inset -8px -8px 15px #ffffff;
-}
-
-.showAnimationLeft {
-  display: flex;
-  padding-top: 6rem;
+.btn_container .play-button:hover {
+  box-shadow: 3px 13px 54px -8px var(--color-cyan);
 }
 
 .circle {
+  display: none;
   width: 5rem;
   height: 5rem;
+  margin-bottom: 5rem;
   color: var(--color-white);
 
   border-radius: 50%;
@@ -172,10 +176,13 @@ button:active {
 footer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: end;
   align-content: center;
   width: 100%;
-  height: 15dvb;
+  height: 20dvb;
+  color: var(--color-dark-gray);
+
+  padding-bottom: 1rem;
 }
 
 footer ul {
@@ -202,14 +209,14 @@ a {
   }
 
   .btn_container button {
-    width: 5rem;
-    height: 5rem;
+    width: 6rem;
+    height: 6rem;
   }
 }
 
-@media (min-width: 345px) {
+@media (min-width: 340px) {
   .btn_container {
-    width: 80%;
+    width: 60%;
     height: 12rem;
   }
 
@@ -217,16 +224,24 @@ a {
     width: 6rem;
     height: 6rem;
   }
+
+  footer {
+    height: 20dvb;
+  }
 }
 @media (min-width: 600px) {
   .btn_container {
-    width: 65%;
-    height: 17rem;
+    width: 45%;
+    height: 18rem;
   }
 
   .btn_container button {
     width: 6rem;
     height: 6rem;
+  }
+
+  footer {
+    height: 15dvb;
   }
 }
 
