Fix: Footer Responsive

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ main {
   display: none;
   width: 5rem;
   height: 5rem;
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
   color: var(--color-white);
 
   border-radius: 50%;
@@ -239,31 +239,46 @@ main {
 /*Footer*/
 
 footer {
+  width: 100%;
+  height: 20vh;
+  text-align: center;
+}
+
+.footer-container {
   display: flex;
   flex-direction: column;
-  justify-content: end;
-  align-content: center;
-  width: 100%;
-  height: 20dvb;
-  color: var(--color-dark-gray);
-
-  padding-bottom: 1rem;
+  align-items: center;
 }
 
-footer ul {
-  padding: 0.5rem 0.5rem 0rem 0.5rem;
-  margin: 2rem 0px 0px 0px;
-}
-
-footer ul li,
-a {
+footer p {
   width: 100%;
-  height: auto;
-  text-align: center;
-  list-style: none;
-  text-decoration: none;
-  font-size: var(--font-size--sm);
+  height: 7vh;
+
+  align-content: end;
   color: var(--color-white);
+
+  margin: 16px 0px 0px 0px;
+}
+
+.social-links {
+  margin: 12px 0px 0px 0px;
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  gap: 20px;
+}
+
+.social-links a {
+  text-decoration: none;
+  color: var(--color-white);
+  font-size: var(--font-size-xsm);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.social-links a:hover {
+  color: var(--color-cyan);
 }
 
 /*Mobile view*/
@@ -276,6 +291,22 @@ a {
   .btn_container button {
     width: 6rem;
     height: 6rem;
+  }
+
+  footer {
+    width: 100%;
+    height: 20dvb;
+    padding-top: 1rem;
+  }
+
+  footer p {
+    width: 95%;
+    height: 7vh;
+
+    align-content: end;
+    color: var(--color-white);
+
+    margin: 16px 0px 0px 0px;
   }
 }
 
@@ -295,8 +326,20 @@ a {
     height: 75%;
   }
 
+  .btn_container {
+    width: 60%;
+    height: 20rem;
+  }
+
+  .circle {
+    margin-bottom: 5rem;
+  }
+
   footer {
-    height: 15dvb;
+    padding-top: 1rem;
+  }
+  footer p {
+    height: 4vh;
   }
 }
 @media (min-width: 600px) {
