--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ p {
     rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
+.cancel-container--btn:hover {
+  scale: 1.1;
+}
+
 main {
   width: 100%;
   height: 80dvb;
