--- a/style.css
+++ b/style.css
@@ -1,25 +1,12 @@
 * {
   box-sizing: border-box;
   min-width: 0;
-}
-
-body {
-  min-height: 100dvh;
-  overflow: hidden;
   margin: 0;
   padding: 0;
-  background-color: var(--color-black);
-}
-
-h1,
-h2,
-h3,
-h4,
-p {
-  text-wrap: pretty;
 }
 
 :root {
+  --dur: 0.3s;
   --color-dark-blue: #005f6b;
   --color-light-blue: #008c9e;
   --color-cyan: #00b4cc;
@@ -34,6 +21,128 @@ p {
   --font-size-md: 20px;
   --font-size-lg: 24;
   --font-size-xlg: 28;
+}
+body,
+input {
+  color: hsl(0, 0%, 10%);
+}
+main,
+.toggle:before,
+.toggle:after {
+  background-color: hsl(0, 0%, 90%);
+}
+
+main,
+.toggle {
+  position: relative;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+.curtain,
+.sr,
+.toggle:before,
+.toggle:after {
+  position: absolute;
+}
+
+.curtain,
+.toggle:before,
+.toggle:after {
+  transition: transform var(--dur);
+}
+
+.curtain,
+.toggle:before,
+.toggle:checked:after {
+  transition-timing-function: ease-out;
+}
+
+.curtain,
+.sr {
+  top: 0;
+  left: 0;
+}
+
+.curtain {
+  background: hsl(0, 0%, 100%);
+  mix-blend-mode: difference;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  transform: scale(0);
+  transform-origin: 0 50%;
+}
+
+.sr,
+.toggle {
+  overflow: hidden;
+}
+
+.sr {
+  clip: rect(1px, 1px, 1px, 1px);
+  color: transparent;
+  width: 1px;
+  height: 1px;
+}
+
+.toggle {
+  background: currentColor;
+  border-radius: 0.75em;
+  cursor: pointer;
+  width: 3em;
+  height: 1.5em;
+  -webkit-tap-highlight-color: transparent;
+}
+.toggle:before,
+.toggle:after {
+  border-radius: 50%;
+  content: "";
+  display: block;
+  top: 0.25em;
+  left: 0.25em;
+  width: 1em;
+  height: 1em;
+}
+
+.toggle:before,
+.toggle:checked:after {
+  transition-delay: 0s;
+}
+
+.toggle:checked:before,
+.toggle:after {
+  transition-delay: calc((--dur) * 0.75);
+  transition-timing-function: cubic-bezier(0.3, 1.6);
+}
+
+.toggle:before {
+  transform: translateX(-1.5em);
+}
+
+.toggle:checked:before {
+  transform: translateX(1.5em);
+}
+
+.toggle:checked:after {
+  transform: translateX(3em);
+}
+.toggle:checked ~ .curtain {
+  transform: scaleX(1em);
+}
+.toggle:focus {
+  outline: transparent;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  text-wrap: pretty;
 }
 
 .modal {
