--- a/style.css
+++ b/style.css
@@ -27,14 +27,15 @@ body {
   transition: 0.5s;
 }
 body.active {
-  background: #f8f8f8;
+  background: var(--color-white);
 }
 
 #toggle {
-  position: relative;
-  display: block;
-  width: 320px;
-  height: 160px;
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  width: 100px;
+  height: 50px;
   border-radius: 160px;
   transition: 0.5s;
   cursor: pointer;
@@ -52,9 +53,12 @@ body.active {
   position: absolute;
   top: 0;
   left: 0;
-  width: 160px;
-  height: 160px;
+  width: 55px;
+  height: 55px;
   background: linear-gradient(to bottom, #444, #222);
+  background-image: url(src/img/moon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
   border-radius: 50%;
   transform: scale(0.9);
   box-shadow: 0 8px 40px rgba(0, 0, 0, 0.05),
@@ -63,8 +67,12 @@ body.active {
   transition: 0.5s;
 }
 #toggle.active .indicator {
-  left: 160px;
+  left: 3rem;
+  top: 0rem;
   background: linear-gradient(to bottom, #eaeaea, #f9f9f9);
+  background-image: url(src/img/sun.svg);
+  background-repeat: no-repeat;
+  background-position: center;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1),
     insent 0 4px 4px rgba(255, 255, 255, 1),
     insent 0 -4px 4px rgba(255, 255, 255, 1);
