--- a/style.css
+++ b/style.css
@@ -95,8 +95,9 @@ p {
 }
 
 .modal-content {
-  width: 80%;
-  height: 70dvb;
+  width: 50%;
+  height: 60dvb;
+  position: relative;
   flex-direction: column;
   justify-content: space-between;
   background-color: white;
@@ -112,15 +113,14 @@ p {
 }
 
 .headphonesIcon_container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  top: 4rem;
+  left: 8rem;
 }
 
 .cancel-container {
   width: 100%;
+  height: 55dvh;
   text-align: end;
 }
 
@@ -166,25 +166,26 @@ main {
 }
 
 .btn_container button {
-  width: 8rem;
-  height: 8rem;
+  width: 9rem;
+  height: 9rem;
+  padding: 1rem;
 
   font-weight: 600;
   font-size: var(--font-size--sm);
   font-family: Arial, Helvetica, sans-serif;
   color: var(--color-white);
-
+  
   background-color: var(--color-aqua);
   border-radius: 20px;
   border: none;
   outline: none;
   box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
-    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
-    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
-    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+  rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+  rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+  rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   transition: all 0.3s ease;
-
+  
   cursor: pointer;
 }
 
@@ -459,8 +460,8 @@ footer.active {
   }
 
   .btn_container button {
-    width: 6rem;
-    height: 6rem;
+    width: 7rem;
+    height: 7rem;
   }
 
   .headphonesIcon {
